--- a/app/views/campaigns/edit.html.erb
+++ b/app/views/campaigns/edit.html.erb
@@ -34,14 +34,14 @@
         <%= form.label :currency, class: "block text-gray-700" %>
         <%= form.text_field :currency, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg" %>
       </div>
-
+      
       <div class="actions">
-        <%= form.submit "Update Campaign", class: "inline-block bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600" %>
+        <%= form.submit "Update Campaign", class: "inline-block bg-teal-500 text-white py-2 px-4 rounded-lg hover:bg-cyan-600" %>
+      </div>
+
+      <div class="mt-4">
+        <%= link_to 'Back', platform_campaigns_path(@platform), class: "inline-block bg-blue-600  text-white py-2 px-4 rounded-lg hover:bg-blue-800" %>
       </div>
     </div>
   <% end %>
-
-  <div class="mt-4">
-    <%= link_to 'Back', platform_campaigns_path(@platform), class: "text-blue-600 hover:text-blue-800" %>
-  </div>
 </div>
