--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -17,15 +17,12 @@
         <tr class="border-b hover:bg-gray-50">
           <td class="py-2 px-4"><%= campaign.title %></td>
           <td class="py-2 px-4"><%= campaign.advertiser_id %></td>
-          <td class="py-2 px-4"><%= number_to_currency(campaign.budget_cents / 100.0, unit: campaign.currency) %></td>
+          <td class="py-2 px-4"><%= campaign.budget_cents %></td>
           <td class="py-2 px-4"><%= campaign.currency %></td>
           <td class="py-2 px-4 space-x-2">
-            <%= link_to 'Show', platform_campaign_path(@platform, campaign), class: "text-blue-600 hover:text-blue-800" %>
-            <%= link_to 'Edit', edit_platform_campaign_path(@platform, campaign), class: "text-green-600 hover:text-green-800" %>
-            <%= link_to 'Delete', platform_campaign_path(@platform, campaign),
-            data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' },
-            class: "text-red-600 hover:text-red-800" %>
-
+            <%= link_to 'Show', platform_campaign_path(@platform, campaign), class: 'bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600' %>
+            <%= link_to 'Edit', edit_platform_campaign_path(@platform, campaign), class: 'bg-emerald-500 text-white py-2 px-4 rounded-lg hover:bg-emerald-600' %>
+            <%= link_to 'Delete', platform_campaign_path(@platform, campaign), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'bg-red-500 text-white py-2 px-4 rounded-lg hover:bg-red-600' %>
           </td>
         </tr>
       <% end %>
@@ -33,10 +30,11 @@
   </table>
 
   <div class="mt-4">
-    <%= link_to 'New Campaign', new_platform_campaign_path(@platform), class: "inline-block bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600" %>
+    <%= link_to 'New Campaign', new_platform_campaign_path(@platform), class: "inline-block bg-teal-500 text-white py-2 px-4 rounded-lg hover:bg-teal-600" %>
   </div>
 
-  <div class="mt-4">
-    <%= paginate @campaigns %>
+  <div class="mt-4 flex justify-center">
+    <%= paginate @campaigns, class: 'flex space-x-2', page_link_class: 'bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600' %>
   </div>
+
 </div>
