--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -36,12 +36,12 @@
       </div>
 
       <div class="actions">
-        <%= form.submit "Create Campaign", class: "inline-block bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600" %>
+        <%= form.submit "Create Campaign", class: "inline-block bg-teal-500 text-white py-2 px-4 rounded-lg hover:bg-cyan-600" %>
+      </div>
+
+      <div class="mt-4">
+        <%= link_to 'Back', platform_campaigns_path(@platform), class: "inline-block bg-blue-600  text-white py-2 px-4 rounded-lg hover:bg-blue-800" %>
       </div>
     </div>
   <% end %>
-
-  <div class="mt-4">
-    <%= link_to 'Back', platform_campaigns_path(@platform), class: "text-blue-600 hover:text-blue-800" %>
-  </div>
 </div>
