--- a/app/views/campaigns/edit.html.erb
+++ b/app/views/campaigns/edit.html.erb
@@ -22,7 +22,7 @@
 
       <div class="mb-4">
         <%= form.label :advertiser_id, class: "block text-gray-700" %>
-        <%= form.text_field :advertiser_id, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg" %>
+        <%= form.collection_select :advertiser_id, @advertisers, :id, :name, { prompt: 'Select Advertiser' }, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg" %>
       </div>
 
       <div class="mb-4">
@@ -35,11 +35,8 @@
         <%= form.text_field :currency, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg" %>
       </div>
       
-      <div class="actions">
+      <div class="flex flex-wrap gap-2">
         <%= form.submit "Update Campaign", class: "inline-block bg-teal-500 text-white py-2 px-4 rounded-lg hover:bg-cyan-600" %>
-      </div>
-
-      <div class="mt-4">
         <%= link_to 'Back', platform_campaigns_path(@platform), class: "inline-block bg-blue-600  text-white py-2 px-4 rounded-lg hover:bg-blue-800" %>
       </div>
     </div>
