--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -2,44 +2,30 @@
   <h1 class="text-2xl font-bold mb-4">New Campaign</h1>
 
   <%= form_with(model: @campaign, url: platform_campaigns_path(@platform), local: true) do |form| %>
-    <% if @campaign.errors.any? %>
-      <div class="mb-4 p-4 bg-red-100 text-red-700 rounded">
-        <h2><%= pluralize(@campaign.errors.count, "error") %> prohibited this campaign from being saved:</h2>
-
-        <ul>
-          <% @campaign.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-          <% end %>
-        </ul>
-      </div>
-    <% end %>
-
     <div class="bg-white shadow-md rounded-lg overflow-hidden p-6">
       <div class="mb-4">
         <%= form.label :title, class: "block text-gray-700" %>
-        <%= form.text_field :title, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg" %>
+        <%= form.text_field :title, placeholder: "Enter campaign title", class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg" %>
       </div>
 
       <div class="mb-4">
         <%= form.label :advertiser_id, class: "block text-gray-700" %>
-        <%= form.text_field :advertiser_id, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg" %>
+        <%= form.collection_select :advertiser_id, @advertisers, :id, :name, { prompt: 'Select Advertiser' }, { class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg" } %>
       </div>
 
       <div class="mb-4">
         <%= form.label :budget_cents, "Budget (cents)", class: "block text-gray-700" %>
-        <%= form.number_field :budget_cents, step: 0.01, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg" %>
+        <%= form.number_field :budget_cents, step: 0.01, placeholder: "e.g. 5000.00", class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg" %>
       </div>
 
       <div class="mb-4">
         <%= form.label :currency, class: "block text-gray-700" %>
-        <%= form.text_field :currency, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg" %>
+        <%= form.text_field :currency, placeholder: "USD, EUR, etc.", class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg" %>
       </div>
 
-      <div class="actions">
+
+      <div class="flex flex-wrap gap-2">
         <%= form.submit "Create Campaign", class: "inline-block bg-teal-500 text-white py-2 px-4 rounded-lg hover:bg-cyan-600" %>
-      </div>
-
-      <div class="mt-4">
         <%= link_to 'Back', platform_campaigns_path(@platform), class: "inline-block bg-blue-600  text-white py-2 px-4 rounded-lg hover:bg-blue-800" %>
       </div>
     </div>
