--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -19,8 +19,8 @@
         <p class="mt-1 block w-full border-gray-300 rounded-md p-2 text-lg"><%= @campaign.platform_campaign_id %></p>
       </div>
       <div class="mb-4">
-        <p class="block text-gray-700">Advertiser ID</p>
-        <p class="mt-1 block w-full border-gray-300 rounded-md p-2 text-lg"><%= @campaign.advertiser_id %></p>
+        <p class="block text-gray-700">Advertiser Name</p>
+        <p class="mt-1 block w-full border-gray-300 rounded-md p-2 text-lg"><%= @campaign.advertiser.name %></p>
       </div>
       <div class="mb-4">
         <p class="block text-gray-700">Budget (cents)</p>
@@ -35,11 +35,8 @@
         <p class="mt-1 block w-full border-gray-300 rounded-md p-2 text-lg"><%= @campaign.updated_at %></p>
       </div>
 
-      <div class="mt-4">
+      <div class="flex flex-wrap gap-2">
         <%= link_to "Edit", edit_platform_campaign_path(@platform, @campaign), class: "inline-block bg-teal-500 text-white py-2 px-4 rounded-lg hover:bg-cyan-600" %>
-      </div>
-
-      <div class="mt-4">
         <%= link_to 'Back', platform_campaigns_path(@platform), class: "inline-block bg-blue-600  text-white py-2 px-4 rounded-lg hover:bg-blue-800" %>
       </div>
   </div>
