--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,12 @@
 
   <body>
     <main class="container mx-auto mt-28 px-5 flex">
+      <% flash.each do |key, message| %>
+        <div id="flash-message" data-controller="flash" data-flash-target="message" data-key="<%= SecureRandom.uuid %>" class="fixed top-4 right-4 z-50 px-4 py-2 rounded shadow-md text-lg font-medium <%= key == 'notice' ? 'bg-green-500 text-white' : 'bg-red-500 text-white' %>">
+          <%= message %>
+        </div>
+      <% end %>
+
       <%= yield %>
     </main>
   </body>
