--- a/app/views/campaigns/edit.html.erb
+++ b/app/views/campaigns/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container mx-auto py-8">
   <h1 class="text-2xl font-bold mb-4">Edit Campaign</h1>
 
-  <%= form_with(model: @campaign, url: platform_campaign_path(@platform, @campaign), local: true) do |form| %>
+  <%= form_with(model: @campaign, url: platform_campaign_path(@platform, @campaign), method: :patch, local: true) do |form| %>
     <% if @campaign.errors.any? %>
       <div class="mb-4 p-4 bg-red-100 text-red-700 rounded">
         <h2><%= pluralize(@campaign.errors.count, "error") %> prohibited this campaign from being saved:</h2>
@@ -27,18 +27,26 @@
 
       <div class="mb-4">
         <%= form.label :budget_cents, "Budget (cents)", class: "block text-gray-700" %>
-        <%= form.number_field :budget_cents, step: 0.01, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg" %>
+        <%= form.number_field :budget_cents, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg" %>
       </div>
 
       <div class="mb-4">
         <%= form.label :currency, class: "block text-gray-700" %>
         <%= form.text_field :currency, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg" %>
       </div>
-      
-      <div class="flex flex-wrap gap-2">
-        <%= form.submit "Update Campaign", class: "inline-block bg-teal-500 text-white py-2 px-4 rounded-lg hover:bg-cyan-600" %>
-        <%= link_to 'Back', platform_campaigns_path(@platform), class: "inline-block bg-blue-600  text-white py-2 px-4 rounded-lg hover:bg-blue-800" %>
+
+      <div class="mb-4">
+        <%= form.label :status, class: "block text-gray-700" %>
+        <%= form.select :status, [['Open', 'open'], ['Archive', 'archive']], { prompt: 'Select Status' }, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg" %>
+      </div>
+
+      <div class="actions">
+        <%= form.submit "Update Campaign", class: "inline-block bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600" %>
       </div>
     </div>
   <% end %>
+
+  <div class="mt-4">
+    <%= link_to 'Back', platform_campaigns_path(@platform), class: "text-blue-600 hover:text-blue-800" %>
+  </div>
 </div>
