--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -35,6 +35,12 @@
         <%= f.text_field :currency, value: params[:currency], class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm" %>
       </div>
 
+      <!-- Status -->
+      <div>
+        <%= f.label :status, "Status", class: "block text-sm font-medium text-gray-700" %>
+        <%= f.select :status, options_for_select([["Open", "open"], ["Archive", "archive"]], params[:status]), { include_blank: true }, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm" %>
+      </div>
+
       <!-- Created At Range -->
       <div class="col-span-1 md:col-span-2 lg:col-span-2 flex gap-2">
         <div class="flex-1">
@@ -70,7 +76,7 @@
   <table class="min-w-full bg-white shadow-md rounded-lg overflow-hidden">
     <thead class="bg-gray-100">
       <tr>
-        <% ["title", "advertiser_name", "budget_cents", "currency", "created_at", "updated_at"].each do |col| %>
+        <% ["title", "advertiser_name", "budget_cents", "currency", "status", "created_at", "updated_at"].each do |col| %>
           <th class="py-2 px-4 text-left">
             <%= link_to col.humanize, platform_campaigns_path(@platform, params.permit!.merge(sort_by: col, sort_direction: params[:sort_direction] == "asc" ? "desc" : "asc")), class: "text-blue-500 hover:text-blue-700" %>
             <% if params[:sort_by] == col %>
@@ -84,10 +90,11 @@
     <tbody>
       <% @campaigns.each do |campaign| %>
         <tr class="border-b hover:bg-gray-50">
-          <td class="py-2 px-4"><%= campaign.title %></td>
+          <td class="py-2 px-4 max-w-xs break-words"><%= campaign.title %></td>
           <td class="py-2 px-4"><%= campaign.advertiser.name %></td>
           <td class="py-2 px-4"><%= campaign.budget_cents %></td>
           <td class="py-2 px-4"><%= campaign.currency %></td>
+          <td class="py-2 px-4"><%= campaign.status.humanize %></td>
           <td class="py-2 px-4"><%= campaign.created_at.strftime("%Y-%m-%d") %></td>
           <td class="py-2 px-4"><%= campaign.updated_at.strftime("%Y-%m-%d") %></td>
           <td class="py-2 px-4 flex flex-wrap gap-2">
@@ -103,8 +110,8 @@
   <div class="mt-4">
     <%= link_to "New Campaign", new_platform_campaign_path(@platform), class: "inline-block bg-teal-500 text-white py-2 px-4 rounded-lg hover:bg-teal-600" %>
   </div>
-
   <div class="mt-4 flex justify-center">
     <%= paginate @campaigns, class: 'flex space-x-2', page_link_class: 'bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600' %>
   </div>
+
 </div>
