--- a/app/views/campaigns/edit.html.erb
+++ b/app/views/campaigns/edit.html.erb
@@ -40,13 +40,12 @@
         <%= form.select :status, [['Open', 'open'], ['Archive', 'archive']], { prompt: 'Select Status' }, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg" %>
       </div>
 
-      <div class="actions">
-        <%= form.submit "Update Campaign", class: "inline-block bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600" %>
+      <div class="flex flex-wrap gap-2">
+        <div class="actions">
+          <%= form.submit "Update", class: "inline-block bg-teal-500 text-white py-2 px-4 rounded-lg hover:bg-teal-600" %>
+        </div>
+        <%= link_to 'Back', platform_campaigns_path(@platform), class: "inline-block bg-blue-600  text-white py-2 px-4 rounded-lg hover:bg-blue-800" %>
       </div>
     </div>
   <% end %>
-
-  <div class="mt-4">
-    <%= link_to 'Back', platform_campaigns_path(@platform), class: "text-blue-600 hover:text-blue-800" %>
-  </div>
 </div>
