--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -108,7 +108,7 @@
   </table>
 
   <div class="mt-4">
-    <%= link_to "New Campaign", new_platform_campaign_path(@platform), class: "inline-block bg-teal-500 text-white py-2 px-4 rounded-lg hover:bg-teal-600" %>
+    <%= link_to "New", new_platform_campaign_path(@platform), class: "inline-block bg-teal-500 text-white py-2 px-4 rounded-lg hover:bg-teal-600" %>
   </div>
   <div class="mt-4 flex justify-center">
     <%= paginate @campaigns, class: 'flex space-x-2', page_link_class: 'bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600' %>
