--- a/app/views/campaigns/edit.html.erb
+++ b/app/views/campaigns/edit.html.erb
@@ -2,49 +2,57 @@
   <h1 class="text-2xl font-bold mb-4">Edit Campaign</h1>
 
   <%= form_with(model: @campaign, url: platform_campaign_path(@platform, @campaign), method: :patch, local: true) do |form| %>
-    <% if @campaign.errors.any? %>
-      <div class="mb-4 p-4 bg-red-100 text-red-700 rounded">
-        <h2><%= pluralize(@campaign.errors.count, "error") %> prohibited this campaign from being saved:</h2>
-
-        <ul>
-          <% @campaign.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-          <% end %>
-        </ul>
-      </div>
-    <% end %>
-
     <div class="bg-white shadow-md rounded-lg overflow-hidden p-6">
       <div class="mb-4">
+        <%= form.label :customer_id, class: "block text-gray-700" %>
+        <%= form.text_field :customer_id, value: @campaign.customer_id, readonly: true, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg bg-gray-200 cursor-not-allowed" %>
+      </div>
+
+      <div class="mb-4">
+        <%= form.label :platform_campaign_id, class: "block text-gray-700" %>
+        <%= form.text_field :platform_campaign_id, value: @campaign.platform_campaign_id, readonly: true, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg bg-gray-200 cursor-not-allowed" %>
+      </div>
+
+      <div class="mb-4">
         <%= form.label :title, class: "block text-gray-700" %>
-        <%= form.text_field :title, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg" %>
+        <%= form.text_field :title, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg bg-blue-100" %>
+      </div>
+      
+      <div class="mb-4">
+        <%= form.label :currency, class: "block text-gray-700" %>
+        <%= form.text_field :currency, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg bg-blue-100" %>
+      </div>
+      
+      <div class="mb-4">
+        <%= form.label :budget_cents, "Budget (cents)", class: "block text-gray-700" %>
+        <%= form.number_field :budget_cents, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg bg-blue-100" %>
       </div>
 
       <div class="mb-4">
         <%= form.label :advertiser_id, class: "block text-gray-700" %>
-        <%= form.collection_select :advertiser_id, @advertisers, :id, :name, { prompt: 'Select Advertiser' }, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg" %>
+        <%= form.collection_select :advertiser_id, @advertisers, :id, :name, { prompt: 'Select Advertiser' }, { class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg bg-blue-100" } %>
       </div>
-
-      <div class="mb-4">
-        <%= form.label :budget_cents, "Budget (cents)", class: "block text-gray-700" %>
-        <%= form.number_field :budget_cents, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg" %>
-      </div>
-
-      <div class="mb-4">
-        <%= form.label :currency, class: "block text-gray-700" %>
-        <%= form.text_field :currency, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg" %>
-      </div>
-
+      
       <div class="mb-4">
         <%= form.label :status, class: "block text-gray-700" %>
-        <%= form.select :status, [['Open', 'open'], ['Archive', 'archive']], { prompt: 'Select Status' }, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg" %>
+        <%= form.select :status, [['Open', 'open'], ['Archive', 'archive']], { prompt: 'Select Status' }, { class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg bg-blue-100" } %>
       </div>
-
+      
+      <div class="mb-4">
+        <%= form.label :created_at, class: "block text-gray-700" %>
+        <%= form.text_field :created_at, value: @campaign.created_at, readonly: true, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg bg-gray-200 cursor-not-allowed" %>
+      </div>
+      
+      <div class="mb-4">
+        <%= form.label :updated_at, class: "block text-gray-700" %>
+        <%= form.text_field :updated_at, value: @campaign.updated_at, readonly: true, class: "mt-1 block w-full border-gray-300 rounded-md p-2 text-lg bg-gray-200 cursor-not-allowed" %>
+      </div>
+      
       <div class="flex flex-wrap gap-2">
         <div class="actions">
           <%= form.submit "Update", class: "inline-block bg-teal-500 text-white py-2 px-4 rounded-lg hover:bg-teal-600" %>
         </div>
-        <%= link_to 'Back', platform_campaigns_path(@platform), class: "inline-block bg-blue-600  text-white py-2 px-4 rounded-lg hover:bg-blue-800" %>
+        <%= link_to 'Back', platform_campaigns_path(@platform), class: "inline-block bg-blue-600 text-white py-2 px-4 rounded-lg hover:bg-blue-800" %>
       </div>
     </div>
   <% end %>
