--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -3,48 +3,43 @@
 
   <div class="bg-white shadow-md rounded-lg overflow-hidden p-6">
       <div class="mb-4">
-        <p class="block text-gray-700">Customer ID</p>
-        <p class="mt-1 block w-full border-gray-300 rounded-md p-2 text-lg"><%= @campaign.customer_id %></p>
-      </div>
-
-      <div class="mb-4">
-        <p class="block text-gray-700">Platform Campaign ID</p>
-        <p class="mt-1 block w-full border-gray-300 rounded-md p-2 text-lg"><%= @campaign.platform_campaign_id %></p>
-      </div>
-
-      <div class="mb-4">
         <p class="block text-gray-700">Title</p>
-        <p class="mt-1 block w-full border-gray-300 rounded-md p-2 text-lg"><%= @campaign.title %></p>
+        <p class="mt-1 block w-full border-gray-300 rounded-md p-2 text-lg bg-gray-200"><%= @campaign.title %></p>
       </div>
 
       <div class="mb-4">
         <p class="block text-gray-700">Currency</p>
-        <p class="mt-1 block w-full border-gray-300 rounded-md p-2 text-lg"><%= @campaign.currency %></p>
+        <p class="mt-1 block w-full border-gray-300 rounded-md p-2 text-lg bg-gray-200"><%= @campaign.currency %></p>
       </div>
 
       <div class="mb-4">
         <p class="block text-gray-700">Budget (cents)</p>
-        <p class="mt-1 block w-full border-gray-300 rounded-md p-2 text-lg"><%= @campaign.budget_cents %></p>
+        <p class="mt-1 block w-full border-gray-300 rounded-md p-2 text-lg bg-gray-200"><%= @campaign.budget_cents %></p>
       </div>
 
       <div class="mb-4">
         <p class="block text-gray-700">Advertiser Name</p>
-        <p class="mt-1 block w-full border-gray-300 rounded-md p-2 text-lg"><%= @campaign.advertiser.name %></p>
+        <p class="mt-1 block w-full border-gray-300 rounded-md p-2 text-lg bg-gray-200"><%= @campaign.advertiser.name %></p>
       </div>
 
       <div class="mb-4">
         <p class="block text-gray-700">Status</p>
-        <p class="mt-1 block w-full border-gray-300 rounded-md p-2 text-lg"><%= @campaign.status.humanize %></p>
+        <p class="mt-1 block w-full border-gray-300 rounded-md p-2 text-lg bg-gray-200"><%= @campaign.status.humanize %></p>
+      </div>
+
+      <div class="mb-4">
+        <p class="block text-gray-700">Platform Campaign ID</p>
+        <p class="mt-1 block w-full border-gray-300 rounded-md p-2 text-lg bg-gray-200"><%= @campaign.platform_campaign_id %></p>
       </div>
 
       <div class="mb-4">
         <p class="block text-gray-700">Created At</p>
-        <p class="mt-1 block w-full border-gray-300 rounded-md p-2 text-lg"><%= @campaign.created_at %></p>
+        <p class="mt-1 block w-full border-gray-300 rounded-md p-2 text-lg bg-gray-200"><%= @campaign.created_at %></p>
       </div>
 
       <div class="mb-4">
         <p class="block text-gray-700">Updated At</p>
-        <p class="mt-1 block w-full border-gray-300 rounded-md p-2 text-lg"><%= @campaign.updated_at %></p>
+        <p class="mt-1 block w-full border-gray-300 rounded-md p-2 text-lg bg-gray-200"><%= @campaign.updated_at %></p>
       </div>
 
       <div class="flex flex-wrap gap-2">
